# NDKDev

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/djf/pedometerdataencrypt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BlueToothJNI.c  app_comm_send.c  app_comm_send.h  app_crc.c  app_crc.h  data_aes.c  data_aes.h  data_pack.c  data_pack.h  data_struct.c  data_struct.h  native-lib.cpp
app/src/main/cpp/aes/: aes_crypt.c  aes_crypt.h
app/src/main/java/com/djf/pedometerdataencrypt/: MainActivity.java  NDKUtils.java
app/src/main/jni/: com_djf_pedometerdataencrypt_NDKUtils.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/djf/pedometerdataencrypt/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sotest/: build.gradle
sotest/src/androidTest/java/com/djf/sotest/: ExampleInstrumentedTest.java
sotest/src/main/: AndroidManifest.xml
sotest/src/main/java/com/djf/pedometerdataencrypt/: NDKUtils.java
sotest/src/main/java/com/djf/sotest/: MainActivity.java
sotest/src/main/res/layout/: activity_main.xml
sotest/src/main/res/values/: strings.xml
sotest/src/test/java/com/djf/sotest/: ExampleUnitTest.java
